--- a/views/index.ejs
+++ b/views/index.ejs
@@ -94,9 +94,9 @@
                 <div class="card h-100 csi-full-card mmd-card">
                     <div class="card-body csi-card">
                         <div class="icon-box"><img class="icon-box-img" src="/assets/icons/mademyday.png"></div>
-                        <h2 class="card-title">Emma O'grady</h2>
+                        <h2 class="card-title">Emma O'Grady</h2>
                         <h3 class="job-title">Digital Manager</h3>
-                        <p class="card-text">Emma as such a willingness to support everyone to be the best that they can be and makes a real difference. She regularly takes time out to ensure that people are OK, cares about people as individual's, shows an interest in others, shows compassion and empathy when things are not great for others, puts in place plans to grow team members and tries to find the positive in everything! As a smile that can light up the room...</p>
+                        <p class="card-text">Emma has such a willingness to support everyone to be the best that they can be and makes a real difference. She regularly takes time out to ensure that people are OK, cares about people as individuals, shows an interest in others, shows compassion and empathy when things are not great for others, puts in place plans to grow team members and tries to find the positive in everything! She has a smile that can light up the room...</p>
                     </div>
                     <div class="card-footer"><a class="btn btn-primary btn-sm csi-btn vote-btn" href="#!">Vote</a></div>
                 </div>
@@ -122,7 +122,7 @@
                     <div class="card h-100 csi-full-card rm-card">
                         <div class="card-body csi-card">
                             <div class="icon-box"><img class="icon-box-img" src="/assets/icons/Rolemodel.png"></div>
-                            <h2 class="card-title">Nicky holling</h2>
+                            <h2 class="card-title">Nicky Holling</h2>
                             <h3 class="job-title">Customer Service Advisor</h3>
                             <p class="card-text">When Nicky enters the room there is an air of positivity and her "can do" attitude is infectious. She handles customer calls brilliantly taking calls from those who are less familiar with certain call types to prevent an escalation, offers to mentor new starts and as shown real determination to train across all service lines in the Centre, indeed Nicky now handles 3 out of the 5 priority lines and a raft of other non-priority lines. Nicky is keen that we achieve the best for our customers which is demonstrated by her checking how performance is looking and voluntarily going back on the phone in periods where we may be struggling.</p>
                         </div>
