--- a/views/categories.ejs
+++ b/views/categories.ejs
@@ -6,7 +6,7 @@
         <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
             <li class="nav-item"><a class="nav-link" aria-current="page" href="/">Home</a></li>
             <li class="nav-item"><a class="nav-link active" href="categories">Categories</a></li>
-            <!-- <li class="nav-item"><a class="nav-link" href="#!">Past Winners</a></li> -->
+            <li class="nav-item"><a class="nav-link active" href="nominees">All nominees</a></li>
         </ul>
     </div>
 </nav>
